[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ollama-benchmark"
version = "0.1.0"
description = "Benchmark local Ollama LLMs"
dependencies = [
    "requests",
    "psutil",
    "GPUtil",
]
requires-python = ">=3.8"

[project.scripts]
ollama-benchmark = "benchmark:main"

[tool.setuptools]
py-modules = ["benchmark"]
