[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "podscribe"
version = "0.1.0"
description = "Audio Transcription & Post-Processing Pipeline"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "assemblyai",
    "genai-prices>=0.0.62",
    "google-genai>=2.6.0",
    "httpx>=0.28.1",
    "jinja2>=3.1.6",
    "openai>=2.38.0",
    "python-dotenv>=1.2.2",
    "tenacity>=9.0.0",
]

[project.scripts]
podscribe = "podscribe.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.9.0",
]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "class .*\\bBase.*\\b\\(ABC\\):",
    "class .*\\bBase.*\\b\\(abc.ABC\\):",
    "@abc.abstractmethod",
    "@abstractmethod",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
]
ignore = [
    "E501", # line too long
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402", "W293"]
