[project]
name = "transcriber"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-genai>=2.6.0",
    "httpx>=0.28.1",
    "openai>=2.38.0",
    "python-dotenv>=1.2.2",
]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]
