[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "podscribe"
version = "0.1.0"
description = "Audio Transcription & Post-Processing Pipeline"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "google-genai>=2.6.0",
    "httpx>=0.28.1",
    "openai>=2.38.0",
    "python-dotenv>=1.2.2",
]

[tool.setuptools.packages.find]
where = ["src"]

[[tool.uv.index]]
url = "https://pypi.org/simple"
default = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[tool.coverage.report]
exclude_also = [
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "class .*\\bBase.*\\b\\(ABC\\):",
    "class .*\\bBase.*\\b\\(abc.ABC\\):",
    "@abc.abstractmethod",
    "@abstractmethod",
]
