[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trashdig"]

[project]
name = "trashdig"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "google-adk",
    "pathspec>=1.0.4",
    "semgrep>=1.159.0",
    "textual>=8.2.3",
    "textual-autocomplete>=4.0.6",
    "tomli-w>=1.2.0",
    "tree-sitter>=0.25.2",
    "tree-sitter-c-sharp>=0.23.1",
    "tree-sitter-go>=0.25.0",
    "tree-sitter-javascript>=0.25.0",
    "tree-sitter-python>=0.25.0",
]

[project.scripts]
trashdig = "trashdig.main:main"

[tool.pytest]
minversion = "9.0"
filterwarnings = [
  "error",
  "ignore::DeprecationWarning:google.genai.types",
  'ignore:\[EXPERIMENTAL\] feature:UserWarning',
  'ignore:unclosed database:ResourceWarning',
]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "mypy>=1.20.1",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.15.10",
]

[[tool.uv.index]]
name = "pypi"
url = "https://pypi.org/simple/"
default = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
# Select default rules plus isort (I), Bandit (S), Bugbear (B), Pyupgrade (UP),
# Async (ASYNC), Simplify (SIM), Print (T20), Comprehensions (C4), Datetime (DTZ)
select = [
    "E", "W", "F", "I", "D", "N",
    "S", "B", "UP", "ASYNC", "SIM", "T20", "C4", "DTZ", "G",
    "PLC", "PLE", "PLR", "PLW", "C90"
]

ignore = ["D203", "D213", "D100", "E501"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["D", "S101", "S108", "ASYNC", "SIM", "C4", "B011", "PLR2004", "PLR0913"]

[tool.ruff.lint.isort]
known-first-party = ["trashdig"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
docstring-code-format = true
