[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[dependency-groups]
dev = [
  "mypy>=1.20.1",
  "pytest-cov>=7.1.0",
  "pytest>=9.0.3",
  "ruff>=0.15.10",
  "toml-sort>=0.24.4"
]

[project]
dependencies = [
  "beautifulsoup4>=4.14.3",
  "google-adk",
  "landlock>=1.0.0.dev5 ; sys_platform == 'linux'",
  "pathspec>=1.0.4",
  "semgrep>=1.159.0",
  "textual-autocomplete>=4.0.6",
  "textual>=8.2.3",
  "tomli-w>=1.2.0",
  "tree-sitter-c-sharp>=0.23.1",
  "tree-sitter-go>=0.25.0",
  "tree-sitter-javascript>=0.25.0",
  "tree-sitter-python>=0.25.0",
  "tree-sitter>=0.25.2"
]
description = "Add your description here"
name = "trashdig"
readme = "README.md"
requires-python = ">=3.12,<3.15"
version = "0.1.0"

[project.scripts]
trashdig = "trashdig.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/trashdig"]

[tool.mypy]

[[tool.mypy.overrides]]
# landlock ships no type stubs and no py.typed marker; suppress the warning.
ignore_missing_imports = true
module = "landlock.*"

[tool.pytest]
anyio_mode = "auto"
filterwarnings = [
  "error",
  "ignore::DeprecationWarning:google.genai.types",
  'ignore:\[EXPERIMENTAL\] feature:UserWarning',
  'ignore:unclosed database:ResourceWarning'
]
minversion = "9.0"
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.format]
docstring-code-format = true
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false

[tool.ruff.lint]
ignore = ["D100", "D203", "D213", "E501"]
# Select default rules plus isort (I), Bandit (S), Bugbear (B), Pyupgrade (UP),
# Async (ASYNC), Simplify (SIM), Print (T20), Comprehensions (C4), Datetime (DTZ)
select = [
  "ASYNC",
  "B",
  "C4",
  "C90",
  "D",
  "DTZ",
  "E",
  "F",
  "G",
  "I",
  "N",
  "PLC",
  "PLE",
  "PLR",
  "PLW",
  "S",
  "SIM",
  "T20",
  "UP",
  "W"
]

[tool.ruff.lint.isort]
known-first-party = ["trashdig"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*" = ["ASYNC", "B011", "C4", "D", "PLR0913", "PLR2004", "S101", "S108", "SIM"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.toml-sort]
all = true
in_place = true

[[tool.uv.index]]
default = true
name = "pypi"
url = "https://pypi.org/simple/"
